reviewed import packages, marked for deltetion useless ones

--- a/main.tex
+++ b/main.tex
@@ -1,21 +1,22 @@
 \documentclass[a4paper]{report}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{latexsym}
-\usepackage{amsmath}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{multirow}
-\usepackage{color}
-\usepackage{amsfonts}
-\usepackage{comment}
-\usepackage{mathrsfs}
+\usepackage[T1]{fontenc} % remove?
+\usepackage[utf8]{inputenc} % to use unicode over ASCII
+\usepackage{amsmath} % math
+\usepackage{float} % easier layouts
+\usepackage{multirow} % tables
 \usepackage{braket}
-\usepackage{lmodern}
+\usepackage{lmodern} % better fonts
 \usepackage{caption}
-\usepackage{siunitx}
-\usepackage{hyperref}
+\usepackage{hyperref} % cite URLs
 \usepackage{todonotes}
+%\usepackage{apacite}
+\usepackage{siunitx} % remove?
+\usepackage{latexsym} % remove?
+\usepackage{graphicx} % remove?
+\usepackage{amsfonts} % remove?
+\usepackage{comment} % remove?
+\usepackage{mathrsfs} % remove?
+\usepackage{color} % remove?
 \textwidth=450pt\oddsidemargin=0pt
 \graphicspath{{img/}}
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png, .gif}
