added on MNIST dataset

--- a/main.tex
+++ b/main.tex
@@ -421,6 +421,10 @@ The accuracy of prediction is only minimally changed.
 Another change observed is that now the weights actually converge to a sphere (figures \ref{uu_hist} and \ref{ii_hist})
 
 \todo[inline]{spiegare il database MNIST}
+\section{The MNIST database}
+
+The Modified National Institute of Standards and Technology database is a set of grayscale-level, centered, size-normalized handwritten 28 by 28 pixels images of handwritten digits.
+The digits were 
 
 \chapter{Accuracy and visual characterization}
 
