explained better decision trees

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -44,3 +44,8 @@
   journal={The elements of statistical learning Springer Series in Statistics. Springer-Verlag, New York},
   year={2001}
 }
+
+@misc{MNISTweb,
+	url={http://yann.lecun.com/exdb/mnist/}
+	author={Yann LeCun, Corinna Cortes, Christopher J.C. Burges}
+}
