modified the explanation of SVMs

--- a/main.tex
+++ b/main.tex
@@ -396,7 +396,7 @@ And $\tau_L$ is a time scale parameter,  $W_{ij}$ is the strength of the synapse
 As evaluating $g$ implies ranking all hidden neurons by activation, there's an implicit competition between patterns.
 The cases in which has value of one and a negative value correspond to Hebbian and anti-Hebbian learning respectively.
 
-Within regards to computational complexity, it was expected the computational complexity to be O(N) \todo[inline]{spiegare cosa sia la complessità computazionale}, where N is the number of epochs processed.
+Within regards to computational complexity, it was expected to be O(N) \todo[inline]{spiegare cosa sia la complessità computazionale}, where N is the number of epochs processed.
 Trying five different values of N gave a linear correlation coefficient of 0.99, thus confirming a computational complexity of O(N).
 
 \subsection{Purpose of this paper}
