explained better the training phase

--- a/main.tex
+++ b/main.tex
@@ -676,6 +676,12 @@ The dot product between the vectors transposed to three dimensions with this tra
 	\phi(\textbf{x}) \cdot \phi(\textbf{y}) = x_1^2y_1^2 + 2x_1x_2y_1y_2 + x_2^2y_2^2 = (x_1y_1+x_2y_2)^2 = (\textbf{x} \cdot \textbf{y})^2.
 \end{equation}
 
+Which is a particular case of a commonly used transformation, the polynomial kernel
+
+\begin{equation}
+	K(\textbf{x},\textbf{y})(\textbf{x}\cdot{y}+c)^d
+\end{equation}
+
 \todo[inline]{deve spiegare più nel dettaglio il metodo che ha implementato, quasi non c'è per nulla la spiegazione!}
 
 \section{Accuracy table}
