--- a/main.tex
+++ b/main.tex
@@ -369,7 +369,7 @@ As usual, there is no universal answer; The one selected in this case is
 	dW'=0.04\frac{dW}{max(|dW|)}\frac{epoch}{epochs}.
 \end{equation}
 
-Where $dW$ is the update to the weights $W$ before we apply this normalization, 
+Where $dW$ is the update to the weights $W$ before we apply this normalization, and "epochs" is the total number of epochs used, 100.
 
 The authors also sum up the characteristics of the algorithm  in four points:
 \begin{itemize}
