explained better the origin of results

--- a/main.tex
+++ b/main.tex
@@ -765,7 +765,7 @@ This would seem to work best when working in conjunction with a random forest si
 It is peculiar that instead, we observe a drop in accuracy when using the method in conjunction with the random forest.
 
 \section{Visual characterization of patterns}
-\todo[inline]{questi sono i risultati del modello originale di hopfield? non è chiaro}
+These, as well as the numerical results shown in the previous section are the results of my re-implementation of the original algorithm by Krotov and Hopfield.
 
 
 \begin{figure} [H]
